# choco

./: .env.example  .gitignore  AGENTS.md  README.md  config.yml  pyproject.toml
.share/: chocoweb-handoff.md
core/: pyproject.toml
core/chococore/: config.py  conversation.py  memory.py  pipecat_utils.py  providers.py
pi/: install.sh  pyproject.toml
pi/chocopi/: audio.py  chocopi  chocopi.py  display.py  wakeword.py
pi/install/systemd/: chocopi.service
src/chocopi/: audio.py  chocopi.py  config.py  conversation.py  display.py  language.py  memory.py  pipecat_utils.py  providers.py  wakeword.py
web/: pyproject.toml  start.sh
web/chocoweb/: pipeline.py  server.py
web/chocoweb/static/: app.js  index.html  styles.css
