[project]
name = "chocopi"
version = "0.1.0"
description = "Voice-powered language tutor for kids, built for Raspberry Pi"
authors = [
    { name = "Max Lee", email = "2389838+codesmax@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0",
    "numpy>=1.26.4,<2.0",
    "openwakeword>=0.6.0",
    "pygame-ce>=2.5.0",
    "python-box>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.0.0",
    "pipecat-ai[openai,google,ultravox,local]>=1.0.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.4.6",
]

[project.scripts]
chocopi = "chocopi:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
