[project]
name = "chococore"
version = "0.1.0"
description = "Platform-agnostic core for the Choco voice assistant"
authors = [
    { name = "Max Lee", email = "2389838+codesmax@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0",
    "python-box>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.0.0",
    "pipecat-ai[openai,google,ultravox]>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
