[project]
name = "chocopi"
version = "0.1.0"
description = "Raspberry Pi kiosk app for the Choco voice assistant"
authors = [
    { name = "Max Lee", email = "2389838+codesmax@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "chococore",
    "numpy>=1.26.4,<2.0",
    "openwakeword>=0.6.0",
    "pygame-ce>=2.5.0",
    "pipecat-ai[local]>=1.0.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.4.6",
]

[project.scripts]
chocopi = "chocopi:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
chococore = { workspace = true }
