[project]
name = "chocoweb"
version = "0.1.0"
description = "Browser-based app for the Choco voice assistant"
authors = [
    { name = "Max Lee", email = "2389838+codesmax@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "chococore",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pipecat-ai[webrtc]>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
chococore = { workspace = true }
